==> PureEngineering/PUREmodules/nrf52/modules_libraries/DW1000.cpp <==
#include "DW1000Time.h"
#define NRF_LOG_MODULE_NAME "APP"
#include "nrf_log.h"
#include "nrf_log_ctrl.h"
#include "nrf_drv_twi.h"
#include "ble_nus.h"
#include "bsp.h"
#include "i2c_driver.h"
#include "ble_driver.h"
#include "math.h"
#include "DW1000Time.h"
#include "DW1000.h"
#include "nrf_drv_spi.h"
#include "nrf_delay.h"

void DW1000Class::handleInterrupt() {
	// read current status and handle via callbacks
	readSystemEventStatusRegister();
	if(isClockProblem() /* TODO and others */ && _handleError != 0) {
		(*_handleError)();
	}
	if(isTransmitDone() &&_handleSent != 0) {
		(*_handleSent)();
		clearTransmitStatus();
	}
	if(isReceiveTimestampAvailable() && _handleReceiveTimestampAvailable != 0) {
		(*_handleReceiveTimestampAvailable)();
		clearReceiveTimestampAvailableStatus();
	}
	if(isReceiveFailed() && _handleReceiveFailed != 0) {
		(*_handleReceiveFailed)();
		clearReceiveStatus();
		if(_permanentReceive) {
			newReceive();
			startReceive();
		}
	} else if(isReceiveTimeout() && _handleReceiveTimeout != 0) {
		(*_handleReceiveTimeout)();
		clearReceiveStatus();
		if(_permanentReceive) {
			newReceive();
			startReceive();
		}
	} else if(isReceiveDone() && _handleReceived != 0) {
		(*_handleReceived)();
		clearReceiveStatus();
		if(_permanentReceive) {
			newReceive();
			startReceive();
		}
	}
	// clear all status that is left
	clearAllStatus();
}

void DW1000Class::setDefaults() {
	if(_deviceMode == TX_MODE) {

	} else if(_deviceMode == RX_MODE) {

	} else if(_deviceMode == IDLE_MODE) {
		useExtendedFrameLength(false);
		useSmartPower(false);
		suppressFrameCheck(false);
		setFrameFilter(false);
		interruptOnSent(true);
		interruptOnReceived(true);
		interruptOnReceiveFailed(true);
		interruptOnReceiveTimestampAvailable(false);
		interruptOnAutomaticAcknowledgeTrigger(true);
		setReceiverAutoReenable(true);
		// default mode when powering up the chip
		// still explicitly selected for later tuning
		enableMode(MODE_LONGDATA_RANGE_LOWPOWER);
	}
}

void DW1000Class::readBytes(nrf_drv_spi_t spi, uint8_t cmd, uint16_t offset, uint8_t data[], unsigned int n) {
	uint8_t header[3];
	int headerLen = 1;
	int i;
	if(offset == NO_SUB) {
		header[0] = READ | cmd;
	} else {
		header[0] = READ_SUB | cmd;
		if(offset < 128) {
			header[1] = (uint8_t)offset;
			headerLen++;
		} else {
			header[1] = READ | (uint8_t)offset;
			header[2] = (uint8_t)(offset >> 7);
			headerLen+=2;
		}
	}

	APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, header, 3, data, n));

	while (!spi_xfer_done)
	{
		__WFE();
	}

	nrf_delay_ms(1);
}

void DW1000Class::writeBytes(nrf_drv_spi_t spi, uint8_t cmd, uint16_t offset, uint8_t data[], unsigned int n) {
	uint8_t header[3];
	int headerLen = 1;
	int i;
	// TODO proper error handling: address out of bounds
	if(offset == NO_SUB) {
		header[0] = WRITE | cmd;
	} else {
		header[0] = WRITE_SUB | cmd;
		if(offset < 128) {
			header[1] = (uint8_t)offset;
			headerLen++;
		} else {
			header[1] = WRITE | (uint8_t)offset;
			header[2] = (uint8_t)(offset >> 7);
			headerLen+=2;
		}
	}
	int sendLen = n+3;
	uint8_t send_data[sendLen];
	send_data[0] = header[0];
	send_data[1] = header[1];
	send_data[2] = header[2];
	for(i = 0; i < n; i++) {
		send_data[3+i] = data[i];
	}
	uint8_t buffer[2];
	APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, send_data, sendLen, buffer, 2));

	while (!spi_xfer_done)
	{
		__WFE();
	}
}
